// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SystemStatusCard should not render hasLastCheckIn 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="system-status-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-10"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              System status
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-12"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <dl
              aria-label="System status title"
              class="pf-v6-c-description-list pf-m-horizontal pf-m-auto-fit"
              data-ouia-component-id="System status title"
              style="--pf-v6-c-description-list--m-horizontal__term--width: 20ch;"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Current state
                  </span>
                </dt>
                <dd
                  aria-label="Current state value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Current state value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    Active
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Registered
                  </span>
                </dt>
                <dd
                  aria-label="Registered value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Registered value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    01 Apr 2014 00:00 UTC
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Last updated
                  </span>
                </dt>
                <dd
                  aria-label="Last updated value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Last updated value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    01 Jun 2014 00:00 UTC
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    <span>
                      RHC
                      <div
                        style="display: contents;"
                      >
                        <button
                          aria-label="Action for RHC"
                          class="pf-v6-c-button pf-m-plain ins-active-general_information__popover-icon"
                          data-ouia-component-id="OUIA-Generated-Button-plain-4"
                          data-ouia-component-type="PF6/Button"
                          data-ouia-safe="true"
                          type="button"
                        >
                          <span
                            class="pf-v6-c-button__icon"
                          >
                            <svg
                              aria-hidden="true"
                              class="pf-v6-svg"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              viewBox="0 0 512 512"
                              width="1em"
                            >
                              <path
                                d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                              />
                            </svg>
                          </span>
                        </button>
                      </div>
                    </span>
                  </span>
                </dt>
                <dd
                  aria-label="RHC value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="RHC value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    Connected
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SystemStatusCard should not render hasRHC 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="system-status-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-16"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              System status
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-18"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <dl
              aria-label="System status title"
              class="pf-v6-c-description-list pf-m-horizontal pf-m-auto-fit"
              data-ouia-component-id="System status title"
              style="--pf-v6-c-description-list--m-horizontal__term--width: 20ch;"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Current state
                  </span>
                </dt>
                <dd
                  aria-label="Current state value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Current state value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    Active
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Registered
                  </span>
                </dt>
                <dd
                  aria-label="Registered value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Registered value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    01 Apr 2014 00:00 UTC
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Last seen
                  </span>
                </dt>
                <dd
                  aria-label="Last seen value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Last seen value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    06 Mar 2025 00:00 UTC
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Last updated
                  </span>
                </dt>
                <dd
                  aria-label="Last updated value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Last updated value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    01 Jun 2014 00:00 UTC
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SystemStatusCard should not render hasRegistered 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="system-status-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-13"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              System status
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-15"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <dl
              aria-label="System status title"
              class="pf-v6-c-description-list pf-m-horizontal pf-m-auto-fit"
              data-ouia-component-id="System status title"
              style="--pf-v6-c-description-list--m-horizontal__term--width: 20ch;"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Current state
                  </span>
                </dt>
                <dd
                  aria-label="Current state value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Current state value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    Active
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Last seen
                  </span>
                </dt>
                <dd
                  aria-label="Last seen value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Last seen value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    06 Mar 2025 00:00 UTC
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Last updated
                  </span>
                </dt>
                <dd
                  aria-label="Last updated value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Last updated value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    01 Jun 2014 00:00 UTC
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    <span>
                      RHC
                      <div
                        style="display: contents;"
                      >
                        <button
                          aria-label="Action for RHC"
                          class="pf-v6-c-button pf-m-plain ins-active-general_information__popover-icon"
                          data-ouia-component-id="OUIA-Generated-Button-plain-5"
                          data-ouia-component-type="PF6/Button"
                          data-ouia-safe="true"
                          type="button"
                        >
                          <span
                            class="pf-v6-c-button__icon"
                          >
                            <svg
                              aria-hidden="true"
                              class="pf-v6-svg"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              viewBox="0 0 512 512"
                              width="1em"
                            >
                              <path
                                d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                              />
                            </svg>
                          </span>
                        </button>
                      </div>
                    </span>
                  </span>
                </dt>
                <dd
                  aria-label="RHC value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="RHC value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    Connected
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SystemStatusCard should not render hasState 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="system-status-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-7"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              System status
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-9"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <dl
              aria-label="System status title"
              class="pf-v6-c-description-list pf-m-horizontal pf-m-auto-fit"
              data-ouia-component-id="System status title"
              style="--pf-v6-c-description-list--m-horizontal__term--width: 20ch;"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Registered
                  </span>
                </dt>
                <dd
                  aria-label="Registered value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Registered value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    01 Apr 2014 00:00 UTC
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Last seen
                  </span>
                </dt>
                <dd
                  aria-label="Last seen value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Last seen value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    06 Mar 2025 00:00 UTC
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Last updated
                  </span>
                </dt>
                <dd
                  aria-label="Last updated value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Last updated value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    01 Jun 2014 00:00 UTC
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    <span>
                      RHC
                      <div
                        style="display: contents;"
                      >
                        <button
                          aria-label="Action for RHC"
                          class="pf-v6-c-button pf-m-plain ins-active-general_information__popover-icon"
                          data-ouia-component-id="OUIA-Generated-Button-plain-3"
                          data-ouia-component-type="PF6/Button"
                          data-ouia-safe="true"
                          type="button"
                        >
                          <span
                            class="pf-v6-c-button__icon"
                          >
                            <svg
                              aria-hidden="true"
                              class="pf-v6-svg"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              viewBox="0 0 512 512"
                              width="1em"
                            >
                              <path
                                d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                              />
                            </svg>
                          </span>
                        </button>
                      </div>
                    </span>
                  </span>
                </dt>
                <dd
                  aria-label="RHC value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="RHC value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    Connected
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SystemStatusCard should render correctly - no data 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="system-status-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-1"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              System status
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-3"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <dl
              aria-label="System status title"
              class="pf-v6-c-description-list pf-m-horizontal pf-m-auto-fit"
              data-ouia-component-id="System status title"
              style="--pf-v6-c-description-list--m-horizontal__term--width: 20ch;"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Current state
                  </span>
                </dt>
                <dd
                  aria-label="Current state value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Current state value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div
                      class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                    >
                      <span
                        class="pf-v6-screen-reader"
                      />
                    </div>
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Registered
                  </span>
                </dt>
                <dd
                  aria-label="Registered value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Registered value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div
                      class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                    >
                      <span
                        class="pf-v6-screen-reader"
                      />
                    </div>
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Last seen
                  </span>
                </dt>
                <dd
                  aria-label="Last seen value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Last seen value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div
                      class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                    >
                      <span
                        class="pf-v6-screen-reader"
                      />
                    </div>
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Last updated
                  </span>
                </dt>
                <dd
                  aria-label="Last updated value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Last updated value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div
                      class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                    >
                      <span
                        class="pf-v6-screen-reader"
                      />
                    </div>
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    <span>
                      RHC
                      <div
                        style="display: contents;"
                      >
                        <button
                          aria-label="Action for RHC"
                          class="pf-v6-c-button pf-m-plain ins-active-general_information__popover-icon"
                          data-ouia-component-id="OUIA-Generated-Button-plain-1"
                          data-ouia-component-type="PF6/Button"
                          data-ouia-safe="true"
                          type="button"
                        >
                          <span
                            class="pf-v6-c-button__icon"
                          >
                            <svg
                              aria-hidden="true"
                              class="pf-v6-svg"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              viewBox="0 0 512 512"
                              width="1em"
                            >
                              <path
                                d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                              />
                            </svg>
                          </span>
                        </button>
                      </div>
                    </span>
                  </span>
                </dt>
                <dd
                  aria-label="RHC value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="RHC value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div
                      class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                    >
                      <span
                        class="pf-v6-screen-reader"
                      />
                    </div>
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SystemStatusCard should render correctly with data 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="system-status-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-4"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              System status
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-6"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <dl
              aria-label="System status title"
              class="pf-v6-c-description-list pf-m-horizontal pf-m-auto-fit"
              data-ouia-component-id="System status title"
              style="--pf-v6-c-description-list--m-horizontal__term--width: 20ch;"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Current state
                  </span>
                </dt>
                <dd
                  aria-label="Current state value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Current state value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    Active
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Registered
                  </span>
                </dt>
                <dd
                  aria-label="Registered value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Registered value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    01 Apr 2014 00:00 UTC
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Last seen
                  </span>
                </dt>
                <dd
                  aria-label="Last seen value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Last seen value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    06 Mar 2025 00:00 UTC
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Last updated
                  </span>
                </dt>
                <dd
                  aria-label="Last updated value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Last updated value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    01 Jun 2014 00:00 UTC
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    <span>
                      RHC
                      <div
                        style="display: contents;"
                      >
                        <button
                          aria-label="Action for RHC"
                          class="pf-v6-c-button pf-m-plain ins-active-general_information__popover-icon"
                          data-ouia-component-id="OUIA-Generated-Button-plain-2"
                          data-ouia-component-type="PF6/Button"
                          data-ouia-safe="true"
                          type="button"
                        >
                          <span
                            class="pf-v6-c-button__icon"
                          >
                            <svg
                              aria-hidden="true"
                              class="pf-v6-svg"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              viewBox="0 0 512 512"
                              width="1em"
                            >
                              <path
                                d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                              />
                            </svg>
                          </span>
                        </button>
                      </div>
                    </span>
                  </span>
                </dt>
                <dd
                  aria-label="RHC value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="RHC value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    Connected
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
